kratos: refactor
